--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,8 @@ jobs:
         node-version: '10.x'
     - name: Install npm dependencies
       run: npm install
+    - name: Build CSS
+      run: npm run build-css
     - name: Deploy to Server
       uses: easingthemes/ssh-deploy@v2.0.7
       env:
