--- a/package.json
+++ b/package.json
@@ -4,23 +4,24 @@
 	"description": "A WordPress theme.",
 	"dependencies": {},
 	"devDependencies": {
-	  "css-loader": "^3.2.0",
-	  "postcss-cli": "^6.1.3",
-	  "precss": "^4.0.0",
-	  "stylelint": "^12.0.0"
+		"@wordpress/browserslist-config": "^2.6.0",
+		"postcss-cli": "^7.1.1",
+		"postcss-import": "^12.0.1",
+		"precss": "^4.0.0",
+		"stylelint": "^13.3.3"
 	},
 	"scripts": {
-	  "fix-css": "stylelint --fix css/*.css",
-	  "build-css": "postcss css/*.css -o style.css"
+		"fix-css": "stylelint --fix css/*.css",
+		"build-css": "cat css/*.css > style.css && postcss style.css --replace"
 	},
 	"repository": {
-	  "type": "git",
-	  "url": "git+https://github.com/jeremyfelt/writemore.git"
+		"type": "git",
+		"url": "git+https://github.com/jeremyfelt/writemore.git"
 	},
 	"author": "jeremyfelt",
 	"license": "GPL-2.0-only",
 	"bugs": {
-	  "url": "https://github.com/jeremyfelt/writemore/issues"
+		"url": "https://github.com/jeremyfelt/writemore/issues"
 	},
 	"homepage": "https://github.com/jeremyfelt/writemore#readme"
 }
