--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,8 +2,7 @@ name: CI
 
 on:
   push:
-    branches:
-      - develop
+    branches: [ develop ]
 
 jobs:
   build:
@@ -11,15 +10,8 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    - uses: actions/checkout@v1
-    - name: Install Node.js
-      uses: actions/setup-node@v1
-      with:
-        node-version: '10.x'
-    - name: Install npm dependencies
-      run: npm install
-    - name: Build CSS
-      run: npm run build-css
+    - uses: actions/checkout@v2
+
     - name: Deploy to Server
       uses: easingthemes/ssh-deploy@v2.0.7
       env:
