--- a/package.json
+++ b/package.json
@@ -2,16 +2,15 @@
 	"name": "writemore",
 	"version": "2.0.0",
 	"description": "A WordPress theme.",
-	"dependencies": {},
 	"devDependencies": {
-		"autoprefixer": "^10.2.5",
-		"postcss": "^8.3.0",
-		"postcss-cli": "^8.3.1",
+		"@wordpress/stylelint-config": "^19.1.0",
+		"autoprefixer": "^10.4.0",
+		"postcss": "^8.3.11",
+		"postcss-cli": "^9.0.2",
 		"postcss-custom-media": "^8.0.0",
 		"postcss-import": "^14.0.2",
 		"precss": "^4.0.0",
-		"stylelint": "^13.13.1",
-		"stylelint-config-wordpress": "^17.0.0"
+		"stylelint": "^13.13.1"
 	},
 	"scripts": {
 		"build": "npm run build:theme",
