--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
 	"version": "2.0.0",
 	"description": "A WordPress theme.",
 	"devDependencies": {
-		"@wordpress/stylelint-config": "^19.1.0",
-		"autoprefixer": "^10.4.0",
-		"postcss": "^8.4.5",
+		"@wordpress/stylelint-config": "^20.0.2",
+		"autoprefixer": "^10.4.4",
+		"postcss": "^8.4.12",
 		"postcss-cli": "^9.1.0",
 		"postcss-custom-media": "^8.0.0",
-		"postcss-import": "^14.0.2",
-		"precss": "^4.0.0",
-		"stylelint": "^13"
+		"postcss-import": "^14.1.0",
+		"precss": "^4.0.0"
 	},
 	"scripts": {
 		"build": "npm run build:theme",
