--- a/package.json
+++ b/package.json
@@ -3,16 +3,11 @@
 	"version": "2.0.0",
 	"description": "A WordPress theme.",
 	"devDependencies": {
-		"@wordpress/stylelint-config": "^21.5.0",
-		"autoprefixer": "^10.4.13",
-		"postcss": "^8.4.19",
-		"postcss-advanced-variables": "^3.0.1",
-		"postcss-cli": "^10.0.0",
-		"postcss-custom-media": "^9.0.0",
-		"postcss-generate-asset-php": "^0.0.2",
-		"postcss-import": "^15.0.0",
-		"postcss-nested": "^6.0.0",
-		"postcss-preset-env": "^7.8.3"
+		"@wordpress/scripts": "^26.14.0",
+		"@wordpress/stylelint-config": "^21.26.0",
+		"postcss-cli": "^10.1.0",
+		"postcss-import": "^15.1.0",
+		"postcss-preset-env": "^9.2.0"
 	},
 	"scripts": {
 		"build": "npm run build:theme",
